subprojects/pclc/test/errors/use_of_void.pcl
// RUN: not pclc %s

a = func(x, y) { print x + y; }
a(1, 2); // ok
b = a(1, 2); // error
